--- a/projekt zespolowy/FrontEnd/index.html
+++ b/projekt zespolowy/FrontEnd/index.html
@@ -162,7 +162,7 @@
             <button type="submit">Zapisz Produkt</button>
             <button type="button" id="clearForm">Anuluj Edycję</button>
         </form>
-
+        <div id="output"></div>
         <h2>Lista Produktów</h2>
         <table id="productTable">
             <thead>
